@@ -1,1 +1,2 @@
 ActiveRecord::Base.send(:include, PaginatingFind)
+ActionView::Base.send(:include, PaginatingFind::Helpers)
